test/core/errors/constants_error/zs/wrong_string_constant_error.zs
package wrong_string_constant_error;

const string WRONG_STRING_CONSTANT = true;
